# CMAD

./: .gitignore  AnalysisManager.cxx  AnalysisManager.h  CMakeLists.txt  Channel.cxx  Channel.h  Parameters.h  README.md  compile.C  test.cpp
